# quantitative-signal-discovery-agent

./: .gitignore  CONTRIBUTING.md  LICENSE-3rd-party.txt  README.md  factor-mining-complete.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
brev/: launchable-setup.ipynb  signal-discovery-workflow.ipynb
configs/: config-optimization-no-telemetry.yml  config-optimization.yml
notebooks/: factor-mining-workflow.ipynb  signal-discovery-workflow.ipynb
src/factor_mining_workflow/: __init__.py  download_data.py  factor_code_generator.py  factor_evaluator.py  factor_generator.py  factor_mining_optimization_workflow.py  factor_mining_workflow.py  factor_optimization_agent.py  llm_utils.py  output_formatter.py  rank_ic_evaluator.py  register.py
src/factor_mining_workflow/template/: calculator.json  factor_output_template.json
src/signal_discovery_workflow/: download_data.py  llm_utils.py  register.py  signal_code_generator.py  signal_discovery_optimization_workflow.py  signal_evaluator.py  signal_generator.py
src/signal_discovery_workflow/template/: signal_output_template.json
tests/: __init__.py  test_factor_code_generator.py  test_factor_evaluator.py  test_factor_generator.py  test_signal_code_generator.py  test_signal_discovery_optimization_workflow.py  test_signal_evaluator.py  test_signal_generator.py
webapp/: README.md  app.py  auth.py  setup_scheduler.ps1  signals.py  update_data.py
