[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[project]
name = "factor_mining_workflow"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain]~=1.3",
  "nvidia-nat-phoenix",
  "pandas",
  "numpy",
  "scipy",
  "yfinance",
  "arize-phoenix",
  "arize-phoenix-otel",
  "openinference-instrumentation-langchain",
]
requires-python = ">=3.11,<3.14"
description = "Factor Mining Workflow - Example for NeMo Agent Toolkit"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
factor_mining_workflow = "factor_mining_workflow.register"
