# SPDX-FileCopyrightText: Copyright (c) 2023-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[project]
name = "factor_mining_workflow"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain]~=1.3",
  "nvidia-nat-phoenix",
  "pandas",
  "numpy",
  "scipy",
  "yfinance",
  "arize-phoenix",
  "arize-phoenix-otel",
  "openinference-instrumentation-langchain",
]
requires-python = ">=3.11,<3.14"
description = "Factor Mining Workflow - Example for NeMo Agent Toolkit"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
factor_mining_workflow = "factor_mining_workflow.register"
